# Star_Seeker_mcp

./: .dockerignore  .env_example  .gitignore  101.py  Dockerfile  LICENSE  README.md  agent_playground.py  config.py  debug_mcp.py  docker-compose.yml  fetch_stars.py  filter_stars.py  fix_test.py  github_client.py  main.py  mcp_server.py  pyproject.toml  search_engine.py  search_tool.py  server.py  star101.ipynb  test_gemini.py  test_server.py
tests/: conftest.py  test_github_client.py  test_no_token_scenarios.py  test_search_engine.py  test_server_tools.py
