[project]
name = "starseeker-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.14.1",
    "google-genai>=1.56.0",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "gradio>=4.0.0",
    "pytest>=8.3.0",
]

